--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,12 @@ asgiref==3.8.1
 Django==4.2.15
 sqlparse==0.5.1
 typing_extensions==4.12.2
+chroma-hnswlib==0.7.6
+chromadb==0.5.5
+langchain==0.2.0
+langchain-community==0.2.0
+openai==1.43.0
+langchain_openai==0.1.23
+pypdf==4.3.1
+tiktoken==0.7.0
+chromadb==0.5.5
