--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,6 @@ openai==1.43.0
 langchain_openai==0.1.23
 pypdf==4.3.1
 tiktoken==0.7.0
-chromadb==0.5.5
+qdrant-client==1.1.6  # Qdrantクライアントライブラリの追加
+langchain-qdrant==0.0.11  # LangChainとQdrantのインターフェース用
+requests==2.31.0  # OpenAIや他のAPIリクエストを送信するため
